NXP-11773: Update css class on foldable link

--- a/nuxeo-platform-jbpm-web/src/main/resources/web/nuxeo.war/process/add_workflow_task.xhtml
+++ b/nuxeo-platform-jbpm-web/src/main/resources/web/nuxeo.war/process/add_workflow_task.xhtml
@@ -23,7 +23,7 @@
 
     <h3 class="#{h3Class}">
       <h:form>
-        <h:commandLink actionListener="#{jbpmActions.toggleShowAddVirtualTaskForm}">
+        <h:commandLink styleClass="foldableHeaderLink" actionListener="#{jbpmActions.toggleShowAddVirtualTaskForm}">
           <h:outputText value="#{messages['label.review.choose.reviewer']}"/>
         </h:commandLink>
       </h:form>
