NXP-12062: Replace specific icon by the default delete icon

--- a/nuxeo-platform-jbpm-web/src/main/resources/web/nuxeo.war/widgets/delete_virtualTask_widget_template.xhtml
+++ b/nuxeo-platform-jbpm-web/src/main/resources/web/nuxeo.war/widgets/delete_virtualTask_widget_template.xhtml
@@ -6,7 +6,7 @@
     <h:commandLink action="#{jbpmActions.removeVirtualTask(index)}"
                    onclick="return confirmDeleteTask();"
                    id="removeParticipant_#{index}">
-      <h:graphicImage value="/icons/action_delete.gif" />
+      <h:graphicImage value="/icons/delete.png" />
     </h:commandLink>
   </c:if>
 
